# zFPKM

./: README.md  pyproject.toml  ty.toml
.github/workflows/: ci-3.10.yml  ci.yml  publish.yml
examples/: example_zfpkm.py  scipy_zfpkm.py  sklearn_zfpkm.py
src/zfpkm/: __init__.py  approx.py  density.py  density_vectorized.py  peak_finder.py  plot.py  type.py
tests/: test_approx.py  test_density.py  test_peak_finder.py  test_zfpkm.py
tests/data/: fpkm.csv  hart_expected_zfpkm.csv
